--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -11,6 +11,7 @@ $body-bg-800:#0C0F17;
 $secondary:#1C1B23;
 $secondary-800:#24232B;
 $grey-color: #596380;
+$grey-color-drk: #6a7596;
 $grey-color-800:#E9E9EC;
 $green-color:#437c1b;
 // 
