--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -415,7 +415,8 @@ ul {
 }
 .shib-popup{
     .modal-content{
-        background-color: $body-bg-800;
+        // background-color: $body-bg-800;
+        background-color:$body-bg;
         border-radius: 40px;
         padding: 40px 20px;
         @media #{$max-xxl}{
