--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -453,7 +453,34 @@
 .full-vh {
     min-height: 100vh
 }
+.fix-vh{
+    height: 400px;
+}
 .fw-bold{
     font-weight: 700;
 }
 
+// common modal eliments style
+.badges-list{
+    .badges-lst-item {
+        margin-bottom: 16px;
+        .bage-bg{
+            background-color: $body-bg-800;
+            color: rgba($color: $white, $alpha: 0.84);
+            box-shadow: 0 0 20px -4px rgb(255 255 255 / 10%);
+            &:hover{
+                background-color: $body-bg-800;
+                color: rgba($color: $white, $alpha: 0.84);
+            }
+            &.active{
+                background: $primary-gradient;
+                box-shadow: none;
+                border-color:transparent;
+                &:hover{
+                    background:$primary-gradient;
+                    color: rgba($color: $white, $alpha: 0.84);
+                }
+            }
+        }
+    }
+}
