push before pull

--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -10,11 +10,14 @@
     border-top-right-radius: 10px;
     padding: 22px;
     margin-top: 32px;
-    div.col-4 {
+    div.col-md-4 {
         display: flex;
         align-items: center;
         span{
             margin-right: 20px;
+        }
+        @media #{$max-md }{
+            margin: 10px 0;
         }
     }
 }
@@ -23,17 +26,27 @@
     display: block;
     width: 100%;
     font-weight: 700;
+    @media #{$max-lg}{
+        font-size: 14px;
+    }
 } 
 .bone_count{
     b{
         font-size: 20px;
         font-weight: 700;
         color: $white;
+        @media #{$max-lg}{
+            font-size: 14px;
+        }
+        
     }
     p{
         font-size: 16px;
         color: $body-text;
         font-weight: 600;
+        @media #{$max-lg}{
+            font-size: 14px;
+        }
     }
 }
 .cont_sec{
@@ -46,6 +59,11 @@
     .row{
         align-items: center;
         justify-content: space-between;
+    }
+    @media #{$max-md}{
+        button{
+            margin-top: 15px;
+        }
     }
 }
 .trns_data .cmn_data {
@@ -65,11 +83,21 @@
     p{
         font-size: 16px;
     }
+    @media #{$max-xl}{
+        font-size: 18px;
+    }
+    @media #{$max-lg}{
+        font-size: 16px;
+    }
+    @media #{$max-md}{
+        font-size: 14px;
+    }
 }
 .trns_date{
     font-weight: 800;
     font-size: 16px;
     color:$body-text ;
+    margin-bottom: 10px;
  }
  .single_trns_row {
     margin-top: 30px;
@@ -92,6 +120,7 @@
     height: 300px;
     overflow-y: auto;
     overflow-x: hidden;
+    margin-top: 30px;
 }
 
 
@@ -173,5 +202,12 @@
         border: 0;
         color: $white;
         box-shadow: none;
+    }
+}
+.trns_top_btns_area{
+    @media #{$max-sm}{
+        div{
+            margin: 10px 0;
+        }
     }
 }
