changes updated in swap token popup

--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -552,3 +552,12 @@
         }
     }
 }
+
+.flex-grid{
+    .box-block{
+        flex: 1;
+        &:nth-child(2){
+            flex: 0 0 64px;
+        }
+    }
+}
