token poups added 3

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -3,7 +3,9 @@
 $primary-gradient:linear-gradient(180deg, #F06500 0%, #F28B03 100%);
 $primary:#F06500;
 $primary-two:#f17d02;
+$primary-three:#F28B03;
 $white:#FFFFFF;
+$lite-grey-secondry:#EAEAE8;
 $body-text:#BBBBBE;
 $body-bg:#151B28;
 $body-bg-secondry:#1E1E1E;
