--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -163,7 +163,7 @@
 }
 .cnfrm_box{
     margin-top: 20px;
-    background-color:$body-bg;
+    background-color:$body-bg-800;
     border-radius: 10px;
 }
 .top_overview{
