changes updated in wallet button

--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -53,6 +53,7 @@
         }
         button{
             background-color: $primary !important;
+            height: auto;
         }
     }
     .dot-icon{
