--- a/public/assets/scss/pages/transactions.scss
+++ b/public/assets/scss/pages/transactions.scss
@@ -21,6 +21,10 @@
         }
     }
 }
+.step_no .spinner-border{
+    height: 4rem;
+    width: 4rem;
+}
 .step_no b {
     font-size: 16px;
     display: block;
