--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -13,7 +13,8 @@
     border-radius: 40px;
     padding: 20px;
     width: calc(100% - 275px);
-    min-height: calc(100vh - 64px);
+    height: calc(100vh - 64px);
+    position: relative;
     @media #{$max-lg}{
         width:calc(100% - 30px);
         margin-left: auto;
