--- a/public/assets/scss/pages/_swap-token.scss
+++ b/public/assets/scss/pages/_swap-token.scss
@@ -1,8 +1,13 @@
 .swap-card {
-    max-width: 600px;
+    width: 600px;
     margin: 0 auto;
-    margin-top: 32px;
     margin-bottom: 32px;
+    margin-top: 42px;
+    max-width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     @media #{$max-xxl}{
         margin-top: 16px;
         margin-bottom: 16px;
