--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -9,4 +9,5 @@
 @import '../../scss/core/faucet';
 @import '../../scss/core/all-validator';
 @import '../../scss/core/withdraw';
+@import '../../scss/core/swap-token';
 
