--- a/public/assets/scss/pages/_swap-token.scss
+++ b/public/assets/scss/pages/_swap-token.scss
@@ -33,7 +33,7 @@
         }
     }
     .flex-form{
-        min-height: 350px;
+        min-height: 400px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -109,4 +109,8 @@
 }
 .gas_token_form .flex-form-top .form-group{
     margin-bottom: 15px;
+}
+.tokn-popup  .spinner-border {
+    height: 8rem;
+    width: 8rem;
 }
