--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -409,7 +409,7 @@ ul {
     color: $white;
 } 
 .cmn_modal input[type="text"], .cmn_modal  input[type="email"]{
-    background-color: $body-bg;
+    background-color: $body-bg-800;
     padding: 15px 20px;
     font-size: 16px;
     border-radius: 10px;
