--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -111,11 +111,12 @@
     padding: 15px;
     border-radius: 10px;
     font-size: 16px;
+    @media #{$max-xxl}{
+        padding: 10px 20px;
+        font-size: 16px;
+    }
     @media #{$max-xl}{
         font-size: 14px;
-    }
-    @media #{$max-md}{
-        padding: 10px 14px;
     }
 }
 .rt-chain {
