--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -35,6 +35,9 @@
     @media #{$max-xl}{
         flex: 0 0 500px;
     }
+    @media only screen and (min-width: 1199px) and (max-width: 1300px){
+        flex: 0 0 460px;
+    }
     @media #{$max-lg}{
         width: 50%;
         flex: 0 0 50%;
@@ -52,6 +55,9 @@
     margin-top: 30px;
     @media #{$max-xl}{
         width: calc(100% - 500px);
+    }
+    @media only screen and (min-width: 1199px) and (max-width: 1300px){
+        width: calc(100% - 460px);
     }
     @media #{$max-lg}{
         width: 50%;
