added popup responsive

--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -61,9 +61,9 @@
     //         width: 100%;
     //     }
     // }
-    .grey-btn{
-        font-weight: 500;
-    }
+    // .grey-btn{
+    //     font-weight: 500;
+    // }
 }
 .btns-wrap{
     margin: 0 10px 10px 0;
