--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -45,7 +45,7 @@
     justify-content: space-between;
     z-index: 99;
     transition: transform 0.5s;
-    @media #{$max-lg}{
+    @media #{$max-xl}{
         transform: translateX(-237px);
         opacity: 0;
         transition: transform 0.5s;
