--- a/public/assets/scss/pages/validator.scss
+++ b/public/assets/scss/pages/validator.scss
@@ -1,6 +1,15 @@
 .top_bnr_area{
     // background-color:$body-bg;
     padding: 70px 0;
+    @media #{$max-xxl}{
+        padding: 50px 0;
+    }
+    @media #{$max-lg}{
+        padding: 30px 0;
+    }
+    @media #{$max-sm}{
+        padding: 25px 0;
+    }
 }
 
 
@@ -8,11 +17,23 @@
     padding: 100px 0;
     text-align: center;
     background-color: $body-bg-800;
+    @media #{$max-xxl}{
+        padding: 70px 0 60px;
+    }
+    @media #{$max-xl}{
+        padding: 60px 0 50px;
+    }
+    @media #{$max-md}{
+        padding: 40px 0 30px;
+    }
     h3{
         margin-top: 15px;
     }
     .btns_sec{
         margin-top: 50px;
+        @media #{$max-xxl}{
+            margin-top: 30px;
+        }
     }
 }
 .cmn_inpt_row{
@@ -25,7 +46,7 @@
 .val_all_bts{
     @media #{$max-md} {
         button{
-            margin:10px 0;
+            margin:0px 0;
         }
     }
 }
